...
    <string name="calculate_bmi">Oblicz BMI</string>
    <string name="fill_all_fields">Wypełnij wszystkie pola!</string>
    <string name="enter_valid_values">Wprowadź prawidłowe wartości!</string>
    <string name="enter_valid_numeric_values">Wprowadź prawidłowe wartości liczbowe!</string>
    <string name="bmi_result">Twoje BMI wynosi: %1$s</string>
    <string name="bmi_underweight">Niedowaga</string>
    <string name="bmi_normal">Optimum</string>
    <string name="bmi_overweight">Nadwaga</string>
    <string name="bmi_obese">Otyłość</string>
    <string name="bmi_chart_title">WYKRES BMI W CZASIE</string>
    <string name="view_bmi_chart">Zobacz wykres BMI</string>

    <string name="caloric_calculator_title">KALKULATOR KALORII</string>
...
